@@ -19,6 +19,7 @@
 <h2> in 2.6.3.0 </h2>
 
 <ul>
+ <li> New dir_fd function wrapping dirfd() (Solaris doesn't have dirfd()). </li>
  <li> memmem implementation for platforms that don't provide it. </li>
  <li> memmem wrappers: byte_search, siovec_search. </li>
  <li> New functions: atomic_symlink, skagetlnmaxsep. </li>
@@ -38,7 +39,6 @@
 <ul>
  <li> New function: <a href="libstddjb/djbunix.html">lock_unx()</a>. </li>
 </ul>
-
 
 <h2> in 2.6.0.2 </h2>
 
