@@ -3,6 +3,9 @@
 #undef _POSIX_C_SOURCE
 #undef _XOPEN_SOURCE
 
+#ifndef _GNU_SOURCE
+#define _GNU_SOURCE
+#endif
 #ifndef _NETBSD_SOURCE
 #define _NETBSD_SOURCE
 #endif
